--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 <script type="text/javascript" src="js/lib/jquery-3.1.0.min.js"></script>
 <script async type="text/javascript" src="js/lib/knockout-3.4.0.js"></script>
 <script async type="text/javascript" src="js/lib/bootstrap.min.js"></script>
-<script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANg_mSOV5v0g_EUSHFNHPV_1ghF1834Ec&libraries=geometry&v=3"></script>
-<script async defer type="text/javascript" src="js/app.js"></script>
 </head>
 <body>
     <div class="wrapper">
@@ -54,6 +52,8 @@
         </main>
       </div>
     </div>
+    <script async type="text/javascript" src="js/app.js"></script>
+    <script async  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANg_mSOV5v0g_EUSHFNHPV_1ghF1834Ec&libraries=geometry&v=3&callback=initMap"></script>
 
 </body>
 </html>
