--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
       -->
     </div>
 
+    <div id="temp">
+      <p>Temp: <span id="temp-number" data-bind="text: temp"></span></p>
+    </div>
     <script async type="text/javascript" src="js/app.js"></script>
     <script async  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyANg_mSOV5v0g_EUSHFNHPV_1ghF1834Ec&libraries=geometry&v=3&callback=initMap"></script>
 
